<resources>
    <string name="app_name">SMSC Inspector</string>
    <string name="action_settings">Settings</string>
    <string name="broadcast_sms_explanation">You have turned on analyzing of incoming SMS.\nPermission to read incoming SMS is required for that.</string>
    <string name="dismiss">Dismiss</string>
    <string name="choose_period_to_analyze">Choose start time to analyze</string>
    <string name="period_last_hour"><u>Last Hour</u></string>
    <string name="period_today"><u>Today</u></string>
    <string name="period_last_week"><u>Last Week</u></string>
    <string name="period_lifetime"><u>Lifetime</u></string>
    <string name="date_range">Date range</string>
    <string name="inbox_analyze_explanation">You have requested analysis of your SMS Inbox.\nTo do that, we require your permission.</string>
    <string name="analyze">Analyze</string>
    <string name="placeholder_smsc_address" translatable="false">SMSC Address</string>
    <string name="placeholder_tp_oa_time" translatable="false">TP-OA-Time</string>
    <string name="template_oa_time">From %1$s at %2$s</string>
    <string name="placeholder_sms_text" translatable="false">SMS Text</string>
    <string name="choose_push" translatable="false">Push</string>
    <string name="choose_csv" translatable="false">CSV</string>
    <string name="report_choice_explanation">Send SMSC address over push (requires Internet)\nor construct a CSV document (requires permission to write data to your phone storage)?</string>
    <string name="hint_no_sms_chosen">Choose SMS for the report first!</string>
    <string name="analyze_incoming_sms">Analyze New SMS</string>
    <string name="error_no_external_storage">Cannot access external storage</string>
    <string name="file_saved">File %1$s saved to your %2$s folder.</string>
    <string name="documents">Documents</string>
    <string name="downloads">Downloads</string>
    <string name="push_sent_success">Report was successfully sent through push.</string>
    <string name="push_sent_failure">Failed to send push report.</string>
    <string name="title_analyze_inbox">Inspect your SMS Inbox</string>
    <string name="report_selection_hint_header">Create a report</string>
    <string name="accept">OK</string>
    <string name="hint_open_csv">Open</string>
    <string name="hint_no_csv_handler">No application to open CSV file</string>
    <string name="placeholder_match_smsc">SMSC match</string>
    <string name="smsc_is_unknown">This SMSC is unknown</string>
    <string name="smsc_legality_aggregator">This SMSC is known as %1$s. If your MNO does not have agreement with this aggregator, consider this SMSC gray.</string>
    <string name="smsc_is_grey">This SMSC is known as originator of gray SMS.</string>
    <string name="midnight" translatable="false">00:00</string>
    <string name="custom_period">Custom Period</string>
    <string name="placeholder_custom_date">Custom Date</string>
    <string name="hint_explain_not_gray">Please provide a brief explanation or specify a SMS aggregator name</string>
    <string name="submit">Submit</string>
    <string name="not_gray">Not Gray!</string>
    <string name="greeting">We are collecting information on fraudulent SMSC addresses.\nPlease report us on suspected fraudulent ("gray") or not fraudulent SMSC.</string>
    <string name="placeholder_up">up</string>
    <string name="save">Save here</string>
    <string name="hint_unable_to_save">Unable to save report</string>
    <string name="check_all">Check all</string>
    <string name="send_report">Send Report</string>
</resources>
