<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/tv_report_choice_explanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/report_choice_explanation"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <Button
            android:text="@string/dismiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_report_choice_cancel"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button
            android:text="@string/choose_push"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_report_choice_push"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:text="@string/choose_csv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_report_choice_csv"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            />
    </LinearLayout>

</FrameLayout>