<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.gmsworldwide.kharlamov.grey_route.fragments.AnalyzeInboxFragment"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/choose_period_to_analyze"
        android:id="@+id/tv_choose_period_hint"
        android:layout_below="@+id/tv_greeting"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/tv_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLines="1"
        android:layout_below="@+id/tv_choose_period_hint"
        style="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/tv_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLines="1"
        android:layout_below="@+id/tv_start_time"
        style="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/tv_predefined_last_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_start_date"
        android:linksClickable="false"
        android:paddingEnd="@dimen/text_margin"
        android:paddingRight="@dimen/text_margin"
        android:paddingTop="@dimen/text_margin"
        android:text="@string/period_last_hour"
        android:textSize="12sp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tv_predefined_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_start_date"
        android:layout_toEndOf="@+id/tv_predefined_last_hour"
        android:layout_toRightOf="@+id/tv_predefined_last_hour"
        android:linksClickable="false"
        android:paddingEnd="@dimen/text_margin"
        android:paddingRight="@dimen/text_margin"
        android:paddingTop="@dimen/text_margin"
        android:text="@string/period_today"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_predefined_last_week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:linksClickable="false"
        android:paddingEnd="@dimen/text_margin"
        android:paddingRight="@dimen/text_margin"
        android:paddingTop="@dimen/text_margin"
        android:text="@string/period_last_week"
        android:textSize="12sp"
        android:layout_below="@+id/tv_predefined_last_hour"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/tv_predefined_lifetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:linksClickable="false"
        android:paddingTop="@dimen/text_margin"
        android:text="@string/period_lifetime"
        android:textSize="12sp"
        android:layout_alignBaseline="@+id/tv_predefined_last_week"
        android:layout_alignBottom="@+id/tv_predefined_last_week"
        android:layout_toRightOf="@+id/tv_predefined_last_week"
        android:layout_toEndOf="@+id/tv_predefined_last_week" />

    <Button
        android:id="@+id/btn_start_analyze_inbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/analyze"
        android:layout_below="@+id/tv_predefined_last_week"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/tv_greeting"
        style="@style/Base.TextAppearance.AppCompat.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:text="@string/greeting"
        android:textAlignment="viewStart"
        android:gravity="start"/>

</RelativeLayout>
