<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cb_check_for_report"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/tv_tp_oa_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_smsc_details"
        android:layout_toRightOf="@+id/cb_check_for_report"
        android:layout_toEndOf="@+id/cb_check_for_report"
        android:text="@string/placeholder_tp_oa_time"
        />

    <TextView
        android:id="@+id/tv_sms_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_tp_oa_time"
        android:layout_alignStart="@+id/tv_tp_oa_time"
        android:layout_below="@+id/tv_tp_oa_time"
        android:layout_toLeftOf="@+id/iv_smsc_legality"
        android:layout_toStartOf="@+id/iv_smsc_legality"
        android:maxLines="1"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:text="@string/placeholder_sms_text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_smsc_address"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:text="@string/placeholder_smsc_address"
        android:layout_toLeftOf="@+id/iv_smsc_legality"
        android:layout_toRightOf="@+id/cb_check_for_report"
        android:layout_toEndOf="@+id/cb_check_for_report" />

    <TextView
        android:id="@+id/tv_smsc_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_smsc_address"
        android:layout_toRightOf="@+id/cb_check_for_report"
        android:layout_toEndOf="@+id/cb_check_for_report"
        android:visibility="gone"
        />

    <ImageView
        android:id="@+id/iv_smsc_legality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/placeholder_match_smsc"
        android:visibility="gone"
        app:srcCompat="@mipmap/ic_aggregator_smsc" />
</RelativeLayout>